# picodi

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  LICENSE  Makefile  README.md  ci.sh  docker-compose.yml  pyproject.toml  setup.cfg
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_f65e92431d01cab84575103e079dee365f3e1550_20241027_112950_uncommited-changes.json
.benchmarks/Linux-CPython-3.10-64bit/: 0001_f65e92431d01cab84575103e079dee365f3e1550_20241027_112721.json
.benchmarks/Linux-CPython-3.11-64bit/: 0001_f65e92431d01cab84575103e079dee365f3e1550_20241027_112711.json
.benchmarks/Linux-CPython-3.12-64bit/: 0001_f65e92431d01cab84575103e079dee365f3e1550_20241027_112740.json
.benchmarks/Linux-CPython-3.13-64bit/: 0001_f65e92431d01cab84575103e079dee365f3e1550_20241027_112755.json
.github/: dependabot.yml
.github/workflows/: workflow-ci.yml
docs/: Makefile  bestpractices.rst  conf.py  faq.rst  fastapi.rst  index.rst  integrations.rst  knownissues.rst  modules.rst  overriding.rst  picodi.rst  quickstart.rst  requirements.txt  scopes.rst  testing.rst
docs/introduction/: index.rst
docs/topics/: async.rst  best_practices.rst  dependencies.rst  injection.rst  integrations.rst  lifespan.rst  overriding.rst  scopes.rst  testing.rst
docs/tutorial/: 01_first_steps.rst  02_yield_dependencies.rst  03_scopes.rst  04_async_dependencies.rst  05_dependency_overrides.rst  06_testing.rst  07_conclusion.rst  index.rst
nanodi/: __init__.py  nanodi.py  providers.py  scopes.py
new_docs/: Makefile  faq.rst  index.rst  requirements.txt
new_docs/introduction/: index.rst
new_docs/topics/: async.rst  best_practices.rst  dependencies.rst  injection.rst  integrations.rst  lifespan.rst  overriding.rst  scopes.rst  testing.rst
new_docs/tutorial/: 01_first_steps.rst  02_yield_dependencies.rst  03_scopes.rst  04_async_dependencies.rst  05_dependency_overrides.rst  06_testing.rst  07_conclusion.rst  index.rst
picodi/: __init__.py  _inject.py  _inject_decorator.py  _internal.py  _picodi.py  _registry.py  _scopes.py  _state.py  _types.py  helpers.py  picodi.py  scopes.py  support.py
picodi/integrations/: _pytest.py  _pytest_asyncio.py  fastapi.py  starlette.py
tests/: conftest.py  test_benchmark.py  test_benchmarks.py  test_complex_logic.py  test_complex_scopes_behaviours.py  test_context_manager_dep.py  test_contextlib_integration.py  test_dependency_decorator.py  test_enter_helper.py  test_fastapi_integration.py  test_get_value_helper.py  test_inject_wrapping.py  test_lifespan.py  test_make_dependency.py  test_multiple_contexts.py  test_override.py  test_parent_call_scope.py  test_race.py  test_resolve_dependency.py  test_standard_dep_with_return.py  test_sync_di.py  test_sync_di_with_closing.py  test_sync_resource.py  test_traceback.py  test_tracking_used_dependencies.py  test_yield_dep.py
tests/core/: test_contextlib.py  test_generator_deps.py  test_inject_with_user_defined_registry.py  test_injectless_dependencies.py  test_preserve_decorated_behaviour.py  test_resolving_rules.py  test_standard_deps.py
tests/helpers/: test_lifespan.py  test_resolve.py
tests/integrations/: conftest.py  test_fastapi.py  test_pytest.py  test_starlette.py
tests/registry/: test_lifespan.py  test_overrides.py  test_pass_registry_to_dependency.py  test_resolve.py  test_set_scopes.py  test_tracking.py
tests/scopes/: test_contextvar_scope.py  test_custom_scopes.py  test_null_scope.py  test_scope_interactions.py  test_singleton_scope.py
tests/test_integrations/: conftest.py  test_fastapi_integration.py  test_pytest_integration.py  test_starlette_integration.py
tests/test_scopes/: test_contextvar_scope.py  test_null_scope.py  test_singleton_scope.py  test_user_defined_scopes.py
