[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "picodi"
description = "Simple Dependency Injection for Python"
version = "0.32.0"
license = "MIT"
authors = [
  "yakimka"
]

readme = "README.md"

repository = "https://github.com/yakimka/picodi"

keywords = []

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.15.0,<2.0.0"
pre-commit = ">=3.7,<5.0"
pytest = ">=8.3.5,<9.0.0"
pytest-asyncio = ">=0.26.0,<1.0.0"
pytest-cov = ">=6.1.1,<7.0.0"
pytest-deadfixtures = ">=2.2.1,<3.0.0"
pytest-randomly = ">=3.16.0,<4.0.0"
fastapi-slim = ">=0.115.12,<1.0.0"
httpx = ">=0.28.1,<1.0.0"
pytest-markdown-docs = ">=0.9.0,<1.0.0"
pytest-race = ">=0.2.0,<1.0.0"
pytest-repeat = ">=0.9.4,<1.0.0"
pytest-benchmark = ">=5.1.0,<6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.3.7,<9.0.0"
furo = "^2024.8.6"

[tool.isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
include_trailing_comma = true
use_parentheses = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
line_length = "88"

[tool.black]
line-length = "88"

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = [
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__",
  ".cache",
  ".venv",
  "venv",
  ".pre-commit",
]

# Strict `@xfail` by default:
xfail_strict = true

# pytest-asyncio
asyncio_mode = "auto"

# Extra options:
addopts = [
  # don't add --cov because it breaks pycharm debugger
  #   just add it manaually when needed to cmd args
  "--import-mode=importlib",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--cov-report=term-missing",
#  "--cov-fail-under=100",
]

markers = [
  "benchmark_test: mark test as a benchmark",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*_benchmarks.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "pass",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
files = ["."]
##
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
